--- a/project.html
+++ b/project.html
@@ -158,7 +158,7 @@
       <!-- Filter Boxes -->
       <div class="project__filter-boxes">
         <!-- 1 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
             <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
@@ -170,25 +170,61 @@
           </div>
         </div>
         <!-- 3 -->
-        <div class="project__filter-box email itemBox">
+        <div class="project__filter-box web itemBox">
           <div class="overlay">
             <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 4 -->
-        <div class="project__filter-box wordpress itemBox">
+        <div class="project__filter-box web itemBox">
           <div class="overlay">
             <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 5 -->
-        <div class="project__filter-box email itemBox">
+        <div class="project__filter-box web itemBox">
           <div class="overlay">
             <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 6 -->
+        <div class="project__filter-box email itemBox">
+          <div class="overlay">
+            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 7 -->
         <div class="project__filter-box web itemBox">
+          <div class="overlay">
+            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 8 -->
+        <div class="project__filter-box web itemBox">
+          <div class="overlay">
+            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 9 -->
+        <div class="project__filter-box web itemBox">
+          <div class="overlay">
+            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 10 -->
+        <div class="project__filter-box email itemBox">
+          <div class="overlay">
+            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 11 -->
+        <div class="project__filter-box web itemBox">
+          <div class="overlay">
+            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 12 -->
+        <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
             <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
