Need to add few images again and also few links, changed box bg color, added go-to-top button in project file, removed more button from project file

--- a/project.html
+++ b/project.html
@@ -87,6 +87,10 @@
 </head>
 
 <body>
+  <!-- Go-To-Top Button Start -->
+  <a href="#" class="go-to-top" id="goToTop">↑</a>
+  <!-- Go-To-Top Button End -->
+
   <!-- Header Start -->
   <header class="header">
     <div class="header__container container">
@@ -231,8 +235,6 @@
         </div>
         
       </div>
-      <!-- Project Button -->
-      <a href="project.html" class="project__btn btn">See More</a>
     </div>
   </div>
   <!-- Project End -->
