created service section, now making it responsive, adding some effect to it and making some design changes to it left

--- a/index.html
+++ b/index.html
@@ -265,13 +265,66 @@
             <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
-        
+
       </div>
       <!-- Project Button -->
       <a href="project.html" class="project__btn btn">See More</a>
     </div>
   </div>
   <!-- PROJECT END -->
+
+  <div class="service section-padding" id="services">
+    <div class="container">
+      <div class="service__wrapper flex">
+
+        <!-- 1 -->
+        <div class="service__wrapper-box">
+          <i class="fa-brands fa-figma"></i>
+          <h2>Figma to Html</h2>
+          <p>I will convert your Figma file into html template. It will be made using best practice and responsive
+            design.</p>
+        </div>
+        <!-- 2 -->
+        <div class="service__wrapper-box">
+          <!-- <i class="fa-solid fa-p"></i>
+          <i class="fa-solid fa-s"></i>
+          <i class="fa-solid fa-d"></i> -->
+          <i class="fa-regular fa-file-code"></i>
+          <h2>PSD to Html</h2>
+          <p>I will convert your Figma file into html template. It will be made using best practice and responsive
+            design.</p>
+        </div>
+        <!-- 3 -->
+        <div class="service__wrapper-box">
+          <i class="fa-solid fa-house"></i>
+          <h2>Landing Page</h2>
+          <p>I will convert your Figma file into html template. It will be made using best practice and responsive
+            design.</p>
+        </div>
+        <!-- 4 -->
+        <div class="service__wrapper-box">
+          <i class="fa-brands fa-wordpress-simple"></i>
+          <h2>Custom WordPress Sites</h2>
+          <p>I will convert your Figma file into html template. It will be made using best practice and responsive
+            design.</p>
+        </div>
+        <!-- 5 -->
+        <div class="service__wrapper-box">
+          <i class="fa-solid fa-envelope"></i>
+          <h2>Email Template</h2>
+          <p>I will convert your Figma file into html template. It will be made using best practice and responsive
+            design.</p>
+        </div>
+
+      </div>
+
+      <!-- Service Button -->
+      <div class="service__btn">
+        <a href="#contact" class="btn">Contact Me</a>
+      </div>
+
+    </div>
+  </div>
 
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/script.js"></script>
