service section fully completerd, now contact me, footer and few changes in project section left

--- a/index.html
+++ b/index.html
@@ -273,31 +273,32 @@
   </div>
   <!-- PROJECT END -->
 
+  <!-- SERVICE START -->
   <div class="service section-padding" id="services">
-    <div class="container">
+    <div class="service__container container">
       <div class="service__wrapper flex">
 
         <!-- 1 -->
+        <div class="service__wrapper-box">
+          <i class="fa-solid fa-house"></i>
+          <h2>Landing Page</h2>
+          <p>I will convert your Figma file into html template. It will be made using best practice and responsive
+            design.</p>
+        </div>
+        <!-- 2 -->
         <div class="service__wrapper-box">
           <i class="fa-brands fa-figma"></i>
           <h2>Figma to Html</h2>
           <p>I will convert your Figma file into html template. It will be made using best practice and responsive
             design.</p>
         </div>
-        <!-- 2 -->
+        <!-- 3 -->
         <div class="service__wrapper-box">
           <!-- <i class="fa-solid fa-p"></i>
           <i class="fa-solid fa-s"></i>
           <i class="fa-solid fa-d"></i> -->
           <i class="fa-regular fa-file-code"></i>
           <h2>PSD to Html</h2>
-          <p>I will convert your Figma file into html template. It will be made using best practice and responsive
-            design.</p>
-        </div>
-        <!-- 3 -->
-        <div class="service__wrapper-box">
-          <i class="fa-solid fa-house"></i>
-          <h2>Landing Page</h2>
           <p>I will convert your Figma file into html template. It will be made using best practice and responsive
             design.</p>
         </div>
@@ -325,6 +326,7 @@
 
     </div>
   </div>
+  <!-- SERVICE END -->
 
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/script.js"></script>
