--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 
 <body>
   <!-- Go-To-Top Button Start -->
-  <a href="#" class="go-to-top" id="goToTop">↑</a>
+  <!-- <a href="#" class="go-to-top" id="goToTop">↑</a> -->
+  <a href="#" class="go-to-top" id="goToTop">
+    <!-- G<br>O<br><br>T<br>O<br><br>T<br>O<br>P -->
+    G<br>O<br><br>T<br>O<br>P
+  </a>
   <!-- Go-To-Top Button End -->
 
   <!-- Header Start -->
@@ -327,6 +331,34 @@
     </div>
   </div>
   <!-- SERVICE END -->
+
+  <!-- CONTACT ME START -->
+   <div class="contact section-padding">
+    <div class="contact__container"></div>
+   </div>
+  <!-- CONTACT ME END -->
+
+  <!-- FOOTER START -->
+  <footer class="footer section-padding">
+    <div class="footer__container container flex">
+      <!-- Copywrite Text -->
+      <div class="footer__copywrite">
+        <p>© 2024. All rights reserved.</p>
+      </div>
+      <!-- Social Start -->
+      <div class="footer__social flex">
+        <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i
+            class="fa-brands fa-github"></i></a>
+<span>/</span>
+        <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank" aria-label="it is linkedin logo"><i
+            class="fa-brands fa-linkedin"></i></a>
+<span>/</span>
+        <a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i
+            class="fa-brands fa-facebook"></i></a>
+      </div>
+    </div>
+  </footer>
+  <!-- FOOTER END -->
 
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/script.js"></script>
