started contact section

--- a/index.html
+++ b/index.html
@@ -333,9 +333,63 @@
   <!-- SERVICE END -->
 
   <!-- CONTACT ME START -->
-   <div class="contact section-padding">
-    <div class="contact__container"></div>
-   </div>
+  <div class="contact section-padding" id="contact">
+    <div class="contact__container container flex">
+      <div class="contact__info flex">
+        <h4>Feel free to contact me for ur upcoming work.</h4>
+
+        <!-- Email -->
+        <div class="contact__info-box flex">
+          <!-- Icon -->
+          <div class="icon">
+            <i class="fa-regular fa-paper-plane"></i>
+          </div>
+          <!-- Email -->
+          <div class="content">
+            <p>Email</p>
+            <p>abdurrobr34l@gmail.com</p>
+          </div>
+        </div>
+
+        <!-- Address -->
+        <div class="contact__info-box flex">
+          <!-- Icon -->
+          <div class="icon">
+            <i class="fa-solid fa-location-dot"></i>
+          </div>
+          <!-- Address -->
+          <div class="content">
+            <p>Address</p>
+            <p>Halishahar,Chittagong Bangladesh</p>
+          </div>
+        </div>
+
+      </div>
+      <div class="contact__form">
+        <form action="#">
+          <!-- Name -->
+          <div class="contact__form-name flex">
+            <label for="name">Name</label>
+            <input type="text" name="name" required>
+          </div>
+
+          <!-- Email -->
+          <div class="contact__form-email flex">
+            <label for="name">Email</label>
+            <input type="email" name="email"required>
+          </div>
+
+          <!-- Message -->
+          <div class="contact__form-message flex">
+            <label for="name">Message</label>
+            <textarea name="message" required></textarea>
+          </div>
+
+          <button type="submit">Send Me Message</button>
+        </form>
+      </div>
+    </div>
+  </div>
   <!-- CONTACT ME END -->
 
   <!-- FOOTER START -->
@@ -349,10 +403,10 @@
       <div class="footer__social flex">
         <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i
             class="fa-brands fa-github"></i></a>
-<span>/</span>
+        <span>/</span>
         <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank" aria-label="it is linkedin logo"><i
             class="fa-brands fa-linkedin"></i></a>
-<span>/</span>
+        <span>/</span>
         <a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i
             class="fa-brands fa-facebook"></i></a>
       </div>
