made copywrite time dynamic also added selection css

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <div class="footer__container container flex">
       <!-- Copywrite Text -->
       <div class="footer__copywrite">
-        <p>© 2024. All rights reserved.</p>
+        <p>© <span id="year"></span>. All rights reserved.</p>
       </div>
       <!-- Social Start -->
       <div class="footer__social flex">
