--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("iXse8ri5XGCWw48pJ"); // Replace with your User ID from EmailJS
+    })();
+  </script>
+  <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
 </head>
 
 <body>
@@ -337,7 +345,7 @@
     <div class="contact__container container flex">
       <!-- Info -->
       <div class="contact__info flex">
-        
+
         <!-- Title -->
         <div class="contact__info-title">
           <h4>Let's Bring Your Ideas to Life! Reach out and let’s make something great together.</h4>
@@ -373,17 +381,17 @@
       <!-- Form -->
       <div class="contact__form">
         <!-- Form -->
-        <form action="#">
+        <form id="contact-form">
           <!-- Name -->
           <div class="contact__form-name flex">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" required>
+            <input type="text" name="user_name" id="name" required>
           </div>
 
           <!-- Email -->
           <div class="contact__form-email flex">
             <label for="name">Email</label>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="user_email" id="email" required>
           </div>
 
           <!-- Message -->
@@ -394,6 +402,7 @@
 
           <button type="submit" class="contact__form-btn btn">Send Me Message</button>
         </form>
+        <p id="status"></p>
       </div>
     </div>
   </div>
