--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@
           <!-- Name -->
           <div class="contact__form-name flex">
             <label for="name">Name</label>
-            <input type="text" name="user_name" id="name" required>
+            <input type="text" name="from_name" id="name" required>
           </div>
 
           <!-- Email -->
           <div class="contact__form-email flex">
             <label for="name">Email</label>
-            <input type="email" name="user_email" id="email" required>
+            <input type="email" name="from_email" id="email" required>
           </div>
 
           <!-- Message -->
