project file some changes made and other changes are made minor

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Abdur Rob</title>
+  <meta name="author" content="Abdur Rob">
   <meta name="description"
     content="Welcome to Abdur Rob's portfolio. Explore my web development projects, skills, and learn more about my journey as a frontend developer.">
   <meta name="keywords"
@@ -27,16 +28,17 @@
   <!-- File Links -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/media.css">
+
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="img/favicon/fav.png">
+
   <!-- Font-Awsome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
+  <!-- Email Initialisation -->
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-
   <script type="text/javascript">
     (function () {
       emailjs.init("iXse8ri5XGCWw48pJ"); // Replace with your User ID from EmailJS
