--- a/project.html
+++ b/project.html
@@ -88,7 +88,11 @@
 
 <body>
   <!-- Go-To-Top Button Start -->
-  <a href="#" class="go-to-top" id="goToTop">↑</a>
+  <!-- <a href="#" class="go-to-top" id="goToTop">↑</a> -->
+  <a href="#" class="go-to-top" id="goToTop">
+    <!-- G<br>O<br><br>T<br>O<br><br>T<br>O<br>P -->
+    G<br>O<br><br>T<br>O<br>P
+  </a>
   <!-- Go-To-Top Button End -->
 
   <!-- Header Start -->
@@ -145,7 +149,7 @@
   <!-- Header End -->
 
   <!-- Project Start -->
-  <div class="project section-padding" id="projects">
+  <div class="project" id="projects">
     <div class="project__container container">
       <!-- Filter Buttons -->
       <div class="project__filter flex">
@@ -238,6 +242,28 @@
     </div>
   </div>
   <!-- Project End -->
+
+    <!-- FOOTER START -->
+    <footer class="footer section-padding">
+      <div class="footer__container container flex">
+        <!-- Copywrite Text -->
+        <div class="footer__copywrite">
+          <p>© <span id="year"></span>. All rights reserved.</p>
+        </div>
+        <!-- Social Start -->
+        <div class="footer__social flex">
+          <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i
+              class="fa-brands fa-github"></i></a>
+          <span>/</span>
+          <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank" aria-label="it is linkedin logo"><i
+              class="fa-brands fa-linkedin"></i></a>
+          <span>/</span>
+          <a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i
+              class="fa-brands fa-facebook"></i></a>
+        </div>
+      </div>
+    </footer>
+    <!-- FOOTER END -->
   
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/script.js"></script>
