--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
 
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/year.js"></script>
 </body>
 
 </html>
