--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abdur Rob</title>
   <meta name="author" content="Abdur Rob">
   <meta name="description"
@@ -13,7 +13,7 @@
   <meta name="robots" content="index, follow">
 
   <!-- Open Graph Tags -->
-  <meta property="og:title" content="Abdur Rob | Frontend Developer & Portfolio">
+  <meta property="og:title" content="Abdur Rob | Frontend Developer & WordPress Developer">
   <meta property="og:description" content="Explore my web development projects and skills as a frontend developer.">
   <meta property="og:image" content="url_to_image.jpg">
   <meta property="og:url" content="https://yourwebsite.com">
@@ -21,7 +21,7 @@
 
   <!-- Twitter Card Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Abdur Rob | Frontend Developer & Portfolio">
+  <meta name="twitter:title" content="Abdur Rob | Frontend Developer & WordPress Developer">
   <meta name="twitter:description" content="Explore my web development projects and skills as a frontend developer.">
   <meta name="twitter:image" content="url_to_image.jpg">
 
@@ -33,16 +33,26 @@
   <link rel="icon" type="image/x-icon" href="img/favicon/fav.png">
 
   <!-- Font-Awsome CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+  <!-- Email Initialisation -->
+  <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("iXse8ri5XGCWw48pJ"); // Replace with your User ID from EmailJS
+    })();
+  </script>
 
 </head>
 
 <body>
   <!-- Go-To-Top Button Start -->
   <!-- <a href="#" class="go-to-top" id="goToTop">↑</a> -->
-  <a href="#" class="go-to-top" id="goToTop">
+  <a href="#" class="go-to-top" id="goToTop" aria-label="this link is for go to top button">
     <!-- G<br>O<br><br>T<br>O<br><br>T<br>O<br>P -->
     G<br>O<br><br>T<br>O<br>P
   </a>
@@ -60,15 +70,15 @@
         <!-- Menus -->
         <nav class="header__nav">
           <ul>
-            <li><a href="index.html#about">About</a></li>
-            <li><a href="index.html#projects">Projects</a></li>
-            <li><a href="index.html#services">Services</a></li>
-            <li><a href="index.html#contact">Contact</a></li>
+            <li><a href="#about" aria-label="it is link for about section">About</a></li>
+            <li><a href="#projects" aria-label="it is link for project section">Projects</a></li>
+            <li><a href="#services" aria-label="it is link for service section">Services</a></li>
+            <li><a href="#contact" aria-label="it is link for contact section">Contact</a></li>
           </ul>
         </nav>
         <!-- Header Button -->
         <div class="header__btn">
-          <a href="#contact" class="btn">Hire Me</a>
+          <a href="#contact" class="btn" aria-label="it is link for contact section">Hire Me</a>
         </div>
         <!-- Hamburger Menu Icon -->
         <div class="header__hamburgermenu-icon">
@@ -86,15 +96,15 @@
       <!-- Menus -->
       <nav class="hamburgermenu__nav flex">
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about" aria-label="it is link for about section">About</a></li>
+          <li><a href="#projects" aria-label="it is link for project section">Projects</a></li>
+          <li><a href="#services" aria-label="it is link for service section">Services</a></li>
+          <li><a href="#contact" aria-label="it is link for contact section">Contact</a></li>
         </ul>
       </nav>
       <!-- Header Button -->
       <div class="hamburgermenu__btn header__btn">
-        <a href="#contact" class="btn">Hire Me</a>
+        <a href="#contact" class="btn" aria-label="it is link for contact section">Hire Me</a>
       </div>
     </div>
   </div>
@@ -121,73 +131,73 @@
         <!-- 1 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 2 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 3 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 4 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 5 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 6 -->
         <div class="project__filter-box email itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 7 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 8 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 9 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 10 -->
         <div class="project__filter-box email itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 11 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 12 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         
