--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
       </div>
       <!-- Project Button -->
-      <a href="project.html" class="project__btn btn">See More</a>
+      <a href="project.html" class="project__btn btn">view my projects</a>
     </div>
   </div>
   <!-- PROJECT END -->
