--- a/index.html
+++ b/index.html
@@ -263,19 +263,19 @@
         <!-- 3 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Edutech/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 4 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 5 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 6 -->
