--- a/project.html
+++ b/project.html
@@ -70,15 +70,15 @@
         <!-- Menus -->
         <nav class="header__nav">
           <ul>
-            <li><a href="#about" aria-label="it is link for about section">About</a></li>
-            <li><a href="#projects" aria-label="it is link for project section">Projects</a></li>
-            <li><a href="#services" aria-label="it is link for service section">Services</a></li>
-            <li><a href="#contact" aria-label="it is link for contact section">Contact</a></li>
+            <li><a href="index.html#about" aria-label="it is link for about section">About</a></li>
+            <li><a href="index.html#projects" aria-label="it is link for project section">Projects</a></li>
+            <li><a href="index.html#services" aria-label="it is link for service section">Services</a></li>
+            <li><a href="index.html#contact" aria-label="it is link for contact section">Contact</a></li>
           </ul>
         </nav>
         <!-- Header Button -->
         <div class="header__btn">
-          <a href="#contact" class="btn" aria-label="it is link for contact section">Hire Me</a>
+          <a href="index.html#contact" class="btn" aria-label="it is link for contact section">Hire Me</a>
         </div>
         <!-- Hamburger Menu Icon -->
         <div class="header__hamburgermenu-icon">
@@ -96,10 +96,10 @@
       <!-- Menus -->
       <nav class="hamburgermenu__nav flex">
         <ul>
-          <li><a href="#about" aria-label="it is link for about section">About</a></li>
-          <li><a href="#projects" aria-label="it is link for project section">Projects</a></li>
-          <li><a href="#services" aria-label="it is link for service section">Services</a></li>
-          <li><a href="#contact" aria-label="it is link for contact section">Contact</a></li>
+          <li><a href="index.html#about" aria-label="it is link for about section">About</a></li>
+          <li><a href="index.html#projects" aria-label="it is link for project section">Projects</a></li>
+          <li><a href="index.html#services" aria-label="it is link for service section">Services</a></li>
+          <li><a href="index.html#contact" aria-label="it is link for contact section">Contact</a></li>
         </ul>
       </nav>
       <!-- Header Button -->
@@ -143,23 +143,23 @@
         <!-- 3 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Edutech/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 4 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 5 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 6 -->
-        <div class="project__filter-box email itemBox">
+        <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
             <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
@@ -167,34 +167,46 @@
         <!-- 7 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/project_nipro-psd/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 8 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Taxi-Cab/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 9 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/project_e-school/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 10 -->
         <div class="project__filter-box email itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Email-Template/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 11 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Project-psd_to_html/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 12 -->
+        <div class="project__filter-box wordpress itemBox">
+          <div class="overlay">
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 13 -->
+        <div class="project__filter-box email itemBox">
+          <div class="overlay">
+            <a href="https://abdurrobr34l.github.io/Email-Template-2/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 14 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
             <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
